# video-feedback-widget-rust-wasm

./: LICENSE.md  README.md
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/controllers/: clips.rs
backend/src/helpers/: errors.rs  mod.rs  utilities.rs
backend/src/services/: ffmpeg.rs
frontend/: .gitignore  Cargo.toml  index.html  main.css
frontend/src/: camera.rs  feedback.rs  form.rs  lib.rs  loading_animated.rs  utilities.rs
frontend/src/models/: mod.rs
frontend/src/service/: camera.rs  feedback.rs  mod.rs  web_socket.rs
