[package]
name = "backend"
version = "0.1.0"
authors = ["Sean Zamora"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo watch -x 'run --bin backend'
# https://actix.rs/docs/request/

[dependencies]
actix = "0.13.0"
actix-http = "3.2.1"
actix-web = { version = "4"}
actix-cors = { version = "0.6.1"}
actix-web-httpauth = "0.6.0"
actix-web-actors = "4.1.0"
actix-files = "0.6.1"

futures-util = "0.3.21"

serde = { version = "1.0", features = ["derive",] }
serde_json = "1"
serde_derive = "1.0.140"

futures = "0.3"

tokio-postgres = { version="0.7.6", features=["with-chrono-0_4", "with-serde_json-1","with-time-0_3", "with-uuid-1"] }

tokio = { version = "1.18.2", features = ["full"] }
postgres = "0.19.3"

field_accessor = "0"

anyhow = "1.0"

reqwest = { version = "^0.11", features = ["json", "blocking"] }
prettytable-rs = "0.8.0"

log = "0.4.3"

env_logger = "0.9.0"

dotenv = "0.15.0"

regex = "1.5.6"
rand = "0.8.5"

jsonwebtoken = "8.1.0"
postgres-types = "0.2.3"

chrono ={version = "0.4.19", features =["serde"]} 

uuid = {version = "1.1.2", features=["serde","v4"]}

data-encoding = "2.3.2"

scraper = "0.13.0"
[features]
with-chrono-0_4 = ["postgres-types/with-chrono-0_4"]
